--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.6
+	miguel5612/MQUnifiedsensor@^3.0.0
