--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	adafruit/DHT sensor library@^1.4.6
 	miguel5612/MQUnifiedsensor@^3.0.0
+	adafruit/Adafruit GFX Library@^1.11.10
+	adafruit/Adafruit SSD1306@^2.5.11
